<resources>
    <string name="app_name">Primeiros Socorros</string>
    <string name="what">O que é?</string>
    <string name="trauma">Trauma</string>
    <string name="choking">Engasgo</string>
    <string name="seizure">Convulsão</string>
    <string name="fainting">Desmaio</string>
    <string name="arrest">Parada\nCardiorespiratória</string>

    <string name="backToMenuLabel">VOLTAR PARA O MENU!</string>
    <string name="nextStoryLabel">IR PARA %1$s!</string>
    <string name="sendLabel">ENVIAR!</string>
    <string name="nowAnswerLabel">AGORA RESPONDA...</string>
    <string name="answerAllQuesitons">Responda todas as questões</string>

    <string name="quizz_right">CORRETO!</string>
    <string name="quizz_wrong">ERRADO</string>

    <string name="q1trauma">Qual a primeira coisa a se fazer em uma situação de trauma?</string>
    <string name="q2trauma">Qual situação não caracteriza uma situação que pode gerar um trauma?</string>
    <string name="q3trauma">O que é um trauma?</string>

    <string name="q1opt1trauma">Tocar no ombro da vítima sem movimentá-la.</string>
    <string name="q1opt2trauma">Chamar a pessoa pelo nome, se possível.</string>
    <string name="q1opt3trauma">Não movimentar a pessoa.</string>
    <string name="q1opt4trauma">Segurar a cabeça.</string>

    <string name="q2opt1trauma">Acidente de carro.</string>
    <string name="q2opt2trauma">Engasgo.</string>
    <string name="q2opt3trauma">Queda de lugares altos.</string>
    <string name="q2opt4trauma">Esmagamento.</string>

    <string name="q3opt1trauma">É um tipo de fratura óssea.</string>
    <string name="q3opt2trauma">É uma doença transmitida pelo ar.</string>
    <string name="q3opt3trauma">É uma doença do coração.</string>
    <string name="q3opt4trauma">É uma lesão causada por um golpe ou impacto.</string>

    <string name="q1choking">O que é um engasgo?</string>
    <string name="q2choking">Qual é o lugar que se posiciona o polegar para realizar a manobra de desengasgo?</string>
    <string name="q3choking">O que não deve se fazer na manobra de desengasgo em bebês menores de 1 ano?</string>

    <string name="q1opt1choking">É um corpo estranho que impede a passagem do ar até chegar no pulmão.</string>
    <string name="q1opt2choking">É uma doença do pulmão.</string>
    <string name="q1opt3choking">É quando o cérebro fica sem oxigênio.</string>
    <string name="q1opt4choking">É um tipo de queda.</string>

    <string name="q2opt1choking">No meio do peito da pessoa.</string>
    <string name="q2opt2choking">No umbigo da pessoa.</string>
    <string name="q2opt3choking">Acima do umbigo da pessoa.</string>
    <string name="q2opt4choking">Abaixo do umbigo da pessoa.</string>

    <string name="q3opt1choking">Golpear 5 vezes as costas do bebê.</string>
    <string name="q3opt2choking">Colocar o bebê para cima.</string>
    <string name="q3opt3choking">Fazer 5 compressões torácicas.</string>
    <string name="q3opt4choking">Colocar o bebê para baixo</string>

    <string name="q1seizure">O que é Convulsão?</string>
    <string name="q2seizure">Qual é a primeira coisa a se fazer com a pessoa que está tendo convulsão?</string>
    <string name="q3seizure">O que não deve se fazer com uma pessoa que está tendo convulsão?</string>

    <string name="q1opt1seizure">É quando uma pessoa desmaia com o corpo tenso e apresenta movimento involuntário.</string>
    <string name="q1opt2seizure">É uma doença contagiosa em que não pode se aproximar da pessoa.</string>
    <string name="q1opt3seizure">É quando a pessoa desmaia e apresenta movimentos na tentativa de se levantar.</string>
    <string name="q1opt4seizure">É uma doença que causa problemas no cérebro e deixa a pessoa acamada.</string>

    <string name="q2opt1seizure">Tentar impedir os movimentos.</string>
    <string name="q2opt2seizure">Abrir a boca da pessoa.</string>
    <string name="q2opt3seizure">Ligar para o SAMU.</string>
    <string name="q2opt4seizure">Dar água ou remédio para a pessoa.</string>

    <string name="q3opt1seizure">Afastar tudo que estiver por perto da pessoa.</string>
    <string name="q3opt2seizure">Abrir a boca da pessoa.</string>
    <string name="q3opt3seizure">Ligar para o SAMU.</string>
    <string name="q3opt4seizure">Afrouxar roupas e esperar que os movimentos parem.</string>

    <string name="q1fainting">O que é desmaio?</string>
    <string name="q2fainting">O que deve ser feito com a pessoa que desmaia?</string>
    <string name="q3fainting">O que não deve ser feito com a pessoa que desmaia?</string>

    <string name="q1opt1fainting">É quando a pessoa cai depois de tropeçar em algo.</string>
    <string name="q1opt2fainting">É a perda temporária e repentina da consciência.</string>
    <string name="q1opt3fainting">É a perda do equilíbrio.</string>
    <string name="q1opt4fainting">Sempre vai acontecer nas pessoas que vão começar a convulsionar.</string>

    <string name="q2opt1fainting">Deixar a pessoa de pé e esperar o socorro.</string>
    <string name="q2opt2fainting">Deixar a pessoa deitada com a cabeça mais alta que o corpo até o socorro chegar.</string>
    <string name="q2opt3fainting">Deixar a pessoa sozinha e chamar o socorro.</string>
    <string name="q2opt4fainting">Deixar a pessoa deitada com a cabeça mais baixa que o corpo até o socorro chegar.</string>

    <string name="q3opt1fainting">Deixar a pessoa de pé e esperar o socorro.</string>
    <string name="q3opt2fainting">Ficar ao lado da pessoa até o socorro chegar.</string>
    <string name="q3opt3fainting">Chamar Socorro e proporcionar espaço para a pessoa respirar.</string>
    <string name="q3opt4fainting">Deixar a pessoa deitada com a cabeça mais baixa que o corpo até o socorro chegar.</string>

    <string name="q1arrest">O que é uma parada cardiorrespiratória?</string>
    <string name="q2arrest">Como sabemos que a pessoa está tendo uma parada respiratória?</string>
    <string name="q3arrest">O que devemos fazer em toda a parada cardiorrespiratória?</string>
    <string name="q4arrest">Quantas compressões deve se fazer em 1 minuto?</string>
    <string name="q5arrest">O que é DEA? Quem pode usá-lo?</string>
    <string name="q6arrest">O que o DEA faz?</string>

    <string name="q1opt1arrest">É quando a pessoa para de respirar e o coração dela para de bater.</string>
    <string name="q1opt2arrest">É somente quando a pessoa para de respirar.</string>
    <string name="q1opt3arrest">É somente quando o coração para de bater.</string>
    <string name="q1opt4arrest">É quando a pessoa precisa de ajuda para respirar.</string>

    <string name="q2opt1arrest">Sentindo a temperatura do corpo.</string>
    <string name="q2opt2arrest">Vendo a pessoa desesperada para respirar, movimentando-se para todos os lados</string>
    <string name="q2opt3arrest">Vendo o tórax não se mexer, não ouvir o barulho da respiração ou não sentir a saída de ar na pele ao aproximar a mão perto do nariz da pessoa.</string>
    <string name="q2opt4arrest">Ouvindo a pessoa chamar socorro, dizendo que não consegue respirar.</string>

    <string name="q3opt1arrest">Deixar a pessoa sozinha e procurar ajuda.</string>
    <string name="q3opt2arrest">Ficar do lado da pessoa até o socorro chegar.</string>
    <string name="q3opt3arrest">Gritar desesperadamente por socorro.</string>
    <string name="q3opt4arrest">Ficar do lado da pessoa até começarem as compressões.</string>

    <string name="q4opt1arrest">80-100 compressões.</string>
    <string name="q4opt2arrest">90-100 compressões.</string>
    <string name="q4opt3arrest">90-110 compressões.</string>
    <string name="q4opt4arrest">100-120 compressões.</string>

    <string name="q5opt1arrest">Dispositivo Externo Automático. Somente o SAMU.</string>
    <string name="q5opt2arrest">Desfibrilador Externo Automático. Qualquer pessoa orientada para uso.</string>
    <string name="q5opt3arrest">Dispositivo Externo Automático. Qualquer pessoa orientada para uso.</string>
    <string name="q5opt4arrest">Desfibrilador Externo Automático. Somente o SAMU.</string>

    <string name="q6opt1arrest">Ele analisa o coração da pessoa e, quando apropriado, aplica um choque para o coração voltar a bater.</string>
    <string name="q6opt2arrest">Ele analisa o coração da pessoa e faz compressão no tórax dela.</string>
    <string name="q6opt3arrest">Ele aplica um choque no coração da pessoa para que ele volte a bater.</string>
    <string name="q6opt4arrest">Ele analisa o coração da pessoa.</string>

</resources>
