<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context="br.com.primeirossocorros.activity.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pt"
            android:layout_width="@dimen/menu_flag_size"
            android:layout_height="@dimen/menu_flag_size"
            android:layout_marginRight="20dp"
            android:src="@drawable/brazil_flag" />

        <ImageView
            android:id="@+id/es"
            android:layout_width="@dimen/menu_flag_size"
            android:layout_height="@dimen/menu_flag_size"
            android:layout_marginRight="20dp"
            android:src="@drawable/spain_flag" />

        <ImageView
            android:id="@+id/en"
            android:layout_width="@dimen/menu_flag_size"
            android:layout_height="@dimen/menu_flag_size"
            android:layout_marginRight="20dp"
            android:src="@drawable/eua_flag" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:weightSum="3">

            <TextView
                android:id="@+id/what"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@mipmap/blank_bg"
                android:gravity="center"
                android:text="@string/what"
                android:textColor="@color/firstAidRed"
                android:textSize="@dimen/menu_font_size" />

            <TextView
                android:id="@+id/trauma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@mipmap/blank_bg"
                android:gravity="center"
                android:text="@string/trauma"
                android:textColor="@color/firstAidRed"
                android:textSize="@dimen/menu_font_size" />

            <TextView
                android:id="@+id/choking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@mipmap/blank_bg"
                android:gravity="center"
                android:text="@string/choking"
                android:textColor="@color/firstAidRed"
                android:textSize="@dimen/menu_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:weightSum="3">

            <TextView
                android:id="@+id/seizure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@mipmap/blank_bg"
                android:gravity="center"
                android:text="@string/seizure"
                android:textColor="@color/firstAidRed"
                android:textSize="@dimen/menu_font_size" />

            <TextView
                android:id="@+id/fainting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@mipmap/blank_bg"
                android:gravity="center"
                android:text="@string/fainting"
                android:textColor="@color/firstAidRed"
                android:textSize="@dimen/menu_font_size" />

            <TextView
                android:id="@+id/arrest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@mipmap/blank_bg"
                android:gravity="center"
                android:text="@string/arrest"
                android:textColor="@color/firstAidRed"
                android:textSize="@dimen/menu_font_size" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
